--- a/src/_scss/2_component/_box.scss
+++ b/src/_scss/2_component/_box.scss
@@ -65,7 +65,7 @@
             
             @include sp {
                 .c-box__content {
-                    margin-bottom: 2px;
+                    margin-bottom: 16px;
                 }
 
                 .c-box__numberbullet {
@@ -162,11 +162,9 @@
 
         @include tab {
             flex-direction: column;
-            row-gap: 30px;
         }
 
         @include sp {
-            row-gap: 14px;
             margin-bottom: 15px;
         }
     }
@@ -176,6 +174,11 @@
 
         @include tab {
             max-width: 100%;
+            margin-bottom: 30px;
+        }
+
+        @include sp {
+            margin-bottom: 14px;
         }
     }
 
@@ -269,9 +272,9 @@
 .c-box--4 {
     flex-direction: row;
     padding: 147px 0 77px;
-    column-gap: 1.4%;
     margin: 0 auto;
     max-width: 1584px;
+    justify-content: space-between;
 
     @include tab {
         max-width: 768px;
@@ -280,10 +283,11 @@
     }
 
     @include sp {
-        padding: 74px 0 100px;
-        row-gap: 16px;
-        column-gap: 1.55%;
+        padding: 74px 0 99px;
+        // row-gap: 16px;
         max-width: 375px;
+        width: 100%;
+        justify-content: space-between;
     }
 
     .c-box__item {
@@ -316,8 +320,8 @@
             }
 
             @include sp {
-                padding: 10px 6px 17px 9px;
-                margin-right: 6px;
+                padding: 10px 6px 3px 9px;
+                margin-bottom: 16px;
 
                 .c-box__title {
                     letter-spacing: 0.4px;
@@ -350,7 +354,8 @@
             }
 
             @include sp {
-                padding: 10px 6px 15px 9px;
+                padding: 10px 6px 3px 9px;
+                margin-bottom: 16px;
 
                 .c-box__img {
                     height: 117px;
@@ -382,8 +387,7 @@
             }
 
             @include sp {
-                padding: 11px 6px 15px 9px;
-                margin-right: 6px;
+                padding: 11px 6px 2px 9px;
 
                 .c-box__title {
                     margin-left: 0;
@@ -417,7 +421,7 @@
             }
 
             @include sp {
-                padding: 10px 7px 15px 8px;
+                padding: 10px 7px 2px 8px;
 
                 .c-box__img {
                     transform: translateX(2px);
@@ -471,6 +475,7 @@
 
         @include sp {
             margin-top: 25px;
+            max-width: 100%;
         }
     }
 
@@ -506,7 +511,7 @@
         @include sp {
             font-size: 1rem;
             margin-top: 5px;
-            max-width: 95%;
+            width: 100%;
             line-height: 1.3;
             letter-spacing: 0.24px;
             margin-left: 1px;
