--- a/src/_partials/footer.ejs
+++ b/src/_partials/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="c-footer">
     <a href="#" class="c-footer__link">
         <picture>
-            <source media="(max-width: 767px)" srcset="">
+            <source media="(max-width: 767px)" srcset="./assets/img/footer__logo-sp.png">
             <img src="./assets/img/footer__logo.png" alt="Coco MGM Design" class="c-footer__img">
         </picture>
     </a>
