--- a/src/_scss/2_component/_finance.scss
+++ b/src/_scss/2_component/_finance.scss
@@ -7,7 +7,7 @@
     }
 
     @include sp {
-        padding: 34px 36px 108px;
+        padding: 34px 36px 61px;
     }
 
     .c-finance__title {
@@ -68,20 +68,18 @@
         margin: 46px auto 0;
         max-width: 1274px;
         width: 100%;
-        gap: 5%;
+        // gap: 5%;
         align-items: center;
-        justify-content: center;
+        justify-content: space-between;
 
         @include tab {
             max-width: 768px;
             flex-direction: column;
-            row-gap: 30px;
         }
 
         @include sp {
             max-width: 302px;
             margin: 22px auto 0;
-            row-gap: 28px;
         }
     }
 
@@ -107,17 +105,24 @@
     .c-finance__left {
         justify-content: space-around;
         padding: 7% 6.7% 5.3%;
+        margin-right: 60px;
 
         @include pc {
             padding: 7% 1.9% 5.3%;
+        }
+
+        @include tab {
+            margin-bottom: 60px;
+            margin-right: 0;
         }
 
         @include sp {
             padding: 18% calc(38.2% - 77px) 5.7% calc(38.2% - 73px);
             justify-content: unset;
             align-items: flex-start;
-            row-gap: 18px;
             letter-spacing: -0.2px;
+            margin-bottom: 28px;
+            margin-right: 0;
         }
 
     }
@@ -131,6 +136,7 @@
 
         @include sp {
             font-size: 1.1rem;
+            margin-bottom: 18px;
         }
     }
 
@@ -234,7 +240,7 @@
 
         @include sp {
             margin-top: -14px;
-    margin-left: 0px;
+            margin-left: 0;
         }
     }
 
@@ -290,7 +296,7 @@
 
         @include sp {
             font-size: 1.1rem;
-            transform: translateY(-10px);
+            transform: translateY(-9px);
         }
     }
 }
