--- a/src/_scss/2_component/_visitor.scss
+++ b/src/_scss/2_component/_visitor.scss
@@ -6,16 +6,17 @@
     }
 
     @include sp {
-        max-width: 332px;
+        max-width: 375px;
         margin: 0 auto;
-        padding: 34px 0px 40px;
+        padding: 11px 0 40px;
     }
 
     .c-visitor__wrapper {
         padding-left: 4px;
 
-        @include tab {
-            padding-left: 0;
+        @include sp {
+            padding-left: 22px;
+            padding-right: 21px;
         }
     }
 
@@ -110,6 +111,10 @@
         justify-content: space-between;
         padding: 35px 3.4% 36px;
         border: 1px solid $main-color;
+
+        @include sp {
+            padding: 36px 5.8% 36px 6.4%;
+        }
     }
 
     .c-visitor__guide {
@@ -147,6 +152,28 @@
                     }
                 }
             }
+
+            @include sp {
+                order: 1;
+
+                .c-visitor__icon {
+                    scale: 0.61;
+                    margin-top: 2px;
+                    margin-left: 6px;
+                }
+
+                .c-visitor__description {
+                    margin-top: -5px;
+                    margin-left: 6px;
+                    letter-spacing: 0.6px;
+                    scale: 0.8;
+                    line-height: 1.6;
+
+                    &:nth-of-type(1) {
+                        margin-top: -5px;
+                    }
+                }
+            }
         }
 
         &:nth-child(2) {
@@ -177,6 +204,27 @@
 
                     &:nth-of-type(1) {
                         margin-top: 15px;
+                    }
+                }
+            }
+
+            @include sp {
+                order: 2;
+
+                .c-visitor__icon {
+                    margin-top: -5px;
+                    margin-left: 18px;
+                    scale: 0.56;
+                }
+
+                .c-visitor__description {
+                    margin-top: -6px;
+                    margin-left: 18px;
+                    letter-spacing: 0.8px;
+                    line-height: 1.9;
+
+                    &:nth-of-type(1) {
+                        margin-top: -8px;
                     }
                 }
             }
@@ -213,6 +261,27 @@
                     }
                 }
             }
+
+            @include sp {
+                order: 5;
+
+                .c-visitor__icon {
+                    scale: 0.75;
+                    margin-top: 9px;
+                    margin-left: 9px;
+                }
+                
+                .c-visitor__description {
+                    margin-top: 1px;
+                    margin-left: 9px;
+                    letter-spacing: 0.3px;
+                    line-height: 1.2;
+
+                    &:nth-of-type(1) {
+                        margin-top: -6px;
+                    }
+                }
+            }
         }
 
         &:nth-child(4) {
@@ -246,6 +315,26 @@
                     }
                 }
             }
+
+            @include sp {
+                order: 6;
+
+                .c-visitor__icon {
+                    margin-top: 39px;
+                    scale: 0.89;
+                    margin-left: 20px;
+                }
+
+                .c-visitor__description {
+                    margin-left: 19px;
+                    letter-spacing: 0.5px;
+                    margin-top: -2px;
+
+                    &:nth-of-type(1) {
+                        margin-top: 14px;
+                    }
+                }
+            }
         }
 
         &:nth-child(5) {
@@ -267,6 +356,26 @@
             @include tab {
                 .c-visitor__description {
                     text-align: center;
+                }
+            }
+
+            @include sp {
+                order: 9;
+
+                .c-visitor__icon {
+                    scale: 0.6;
+                    margin-top: 8px;
+                    margin-left: 8px;
+                }
+
+                .c-visitor__description {
+                    margin-left: 25px;
+                    letter-spacing: 0.5px;
+                    margin-top: -2px;
+
+                    &:nth-of-type(1) {
+                        margin-top: -20px;
+                    }
                 }
             }
         }
@@ -293,6 +402,26 @@
 
                     &:nth-of-type(1) {
                         margin-top: 21px;
+                    }
+                }
+            }
+
+            @include sp {
+                order: 3;
+
+                .c-visitor__icon {
+                    scale: 0.6;
+                    margin-top: -11px;
+                    margin-left: 6px;
+                }
+
+                .c-visitor__description {
+                    transform: none;
+                    margin-left: 6px;
+                    letter-spacing: 0.4px;
+
+                    &:nth-of-type(1) {
+                        margin-top: -10px;
                     }
                 }
             }
@@ -328,6 +457,26 @@
                     }
                 }
             }
+
+            @include sp {
+                order: 4;
+
+                .c-visitor__icon {
+                    margin-top: -8px;
+                    margin-left: 18px;
+                    scale: 0.5;
+                }
+
+                .c-visitor__description {
+                    line-height: 1.31;
+                    margin-left: 18px;
+                    letter-spacing: 0.6px;
+
+                    &:nth-of-type(1) {
+                        margin-top: -9px;
+                    }
+                }
+            }
         }
 
         &:nth-child(8) {
@@ -357,6 +506,26 @@
 
                     &:nth-of-type(1) {
                         margin-top: 28px;
+                    }
+                }
+            }
+
+            @include sp {
+                order: 7;
+
+                .c-visitor__icon {
+                    scale: 0.65;
+                    margin-top: -1px;
+                    margin-left: 9px;
+                }
+
+                .c-visitor__description {
+                    margin-left: 9px;
+                    line-height: 1.3;
+                    letter-spacing: 0.8px;
+
+                    &:nth-of-type(1) {
+                        margin-top: -4px;
                     }
                 }
             }
@@ -392,6 +561,26 @@
                     }
                 }
             }
+
+            @include sp {
+                order: 8;
+
+                .c-visitor__icon {
+                    scale: 0.72;
+                    margin-left: 20px;
+                    margin-top: 2px;
+                }
+
+                .c-visitor__description {
+                    letter-spacing: 0.6px;
+                    margin-left: 20px;
+                    margin-top: -4px;
+
+                    &:nth-of-type(1) {
+                        margin-top: -1px;
+                    }
+                }
+            }
         }
 
         &:nth-child(10) {
@@ -421,6 +610,26 @@
 
                     &:nth-of-type(1) {
                         margin-top: 28px;
+                    }
+                }
+            }
+
+            @include sp {
+                order: 10;
+
+                .c-visitor__icon {
+                    scale: 0.69;
+                    margin-top: 16px;
+                    margin-left: 3px;
+                }
+
+                .c-visitor__description {
+                    margin-left: 0;
+                    letter-spacing: 0.3px;
+                    margin-top: -3px;
+
+                    &:nth-of-type(1) {
+                        margin-top: -11px;
                     }
                 }
             }
@@ -474,6 +683,61 @@
                 border-right: 0;
             }
         }
+
+        @include sp {
+            flex: 1 1 50%;
+            padding: 0 0.8% 14px;
+
+            &:nth-child(3),
+            &:nth-child(4) {
+                padding: 0 0.8% 19px;
+            }
+
+            &:nth-child(5) {
+                border-right: 1px solid #aeaeae;
+                border-bottom: 0;
+            }
+
+            &:nth-child(7) {
+                padding: 0 0.8% 34px;
+            }
+            
+            &:nth-child(8),
+            &:nth-child(9) {
+                padding: 0 0.8% 32px;
+            }
+
+            &:nth-child(5),
+            &:nth-child(10) {
+                padding: 0 0.8% 33px;
+            }
+
+            &:nth-child(2),
+            &:nth-child(4),
+            &:nth-child(7),
+            &:nth-child(9) {
+                border-right: 0;
+            };
+
+            &:nth-child(6),
+            &:nth-child(7),
+            &:nth-child(8),
+            &:nth-child(9) {
+                border-bottom: 1px solid #aeaeae;
+            };
+
+            &:nth-child(6) {
+                padding: 0 0.8% 14px;
+            }
+
+            &:nth-child(1),
+            &:nth-child(3),
+            &:nth-child(5),
+            &:nth-child(6),
+            &:nth-child(8) {
+                margin-right: -22px;
+            }
+        }
     }
 
     .c-visitor__icon {
@@ -487,5 +751,10 @@
         margin-left: -15px;
         font-feature-settings: "palt";
         text-align: center;
+
+        @include sp {
+            font-size: 1.1rem;
+            scale: 0.8;
+        }
     }
 }
