--- a/src/_scss/2_component/_web.scss
+++ b/src/_scss/2_component/_web.scss
@@ -79,16 +79,12 @@
             max-width: 767px;
             margin: 72px auto 0;
             flex-wrap: wrap;
-            row-gap: 40px;
-            column-gap: 40px;
             padding-left: 0;
         }
 
         @include sp {
             max-width: 375px;
             margin: 35px auto 0;
-            row-gap: 23px;
-            column-gap: 0;
         }
     }
 
@@ -247,6 +243,7 @@
 
         @include tab {
             width: 47%;
+            margin-bottom: 40px;
 
             &:nth-child(1) {
                 transform: none;
@@ -268,6 +265,7 @@
         @include sp {
             width: 43%;
             padding-bottom: 4.3%;
+            margin-bottom: 23px;
 
             &::before {
                 width: 4px;
