--- a/src/_scss/2_component/_box.scss
+++ b/src/_scss/2_component/_box.scss
@@ -191,8 +191,7 @@
         }
 
         @include sp {
-            scale: 0.5;
-            transform: translate(-41px, -25px);
+            transform: scale(0.5) translate(-41px, -25px) !important;
         }
     }
 
@@ -234,7 +233,7 @@
         }
 
         @include sp {
-            scale: 0.5;
+            transform: scale(0.5);
             top: -72%;
             right: 5.1%;
         }
