--- a/src/_scss/2_component/_mainvisual.scss
+++ b/src/_scss/2_component/_mainvisual.scss
@@ -43,7 +43,7 @@
         margin-top: 50%;
 
         @include sp {
-            scale: 0.53;
+            transform: scale(0.53);
             margin-top: 17%;
         }
     }
@@ -74,9 +74,8 @@
         transform: translate(5px, 0);
 
         @include sp {
-            scale: 0.75;
             margin-top: 6.2%;
-            transform: translate(11px, 0);
+            transform: scale(0.75) translate(11px, 0);
         }
     }
 }
