--- a/src/_scss/2_component/_web.scss
+++ b/src/_scss/2_component/_web.scss
@@ -162,8 +162,7 @@
             }
 
             .c-web__icon {
-                transform: translate(0, -8px);
-                scale: 0.8;
+                transform: scale(0.8) translate(0, -8px);
             }
 
             .c-web__name {
@@ -183,8 +182,7 @@
             }
 
             .c-web__icon {
-                scale: 0.85;
-                transform: translate(0, -3px);
+                transform: scale(0.85) translate(0, -3px);
             }
 
             .c-web__name {
@@ -211,8 +209,7 @@
             }
 
             .c-web__icon {
-                scale: 0.95;
-                transform: translate(-3px, -5px);
+                transform: scale(0.95) translate(-3px, -5px);
             }
 
             .c-web__name {
@@ -330,8 +327,7 @@
                 }
 
                 .c-web__icon {
-                    transform: translate(0, -3px);
-                    scale: 0.8;
+                    transform: scale(0.85) translate(0, -3px);
                 }
 
                 .c-web__name {
