--- a/src/_partials/footer.ejs
+++ b/src/_partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="c-footer">
-    <a href="#" class="c-footer__link">
+    <a href="./" class="c-footer__link">
         <picture>
             <source media="(max-width: 767px)" srcset="./assets/img/footer__logo-sp.png">
             <img src="./assets/img/footer__logo.png" alt="Coco MGM Design" class="c-footer__img">
