--- a/src/_scss/0_base/_vars.scss
+++ b/src/_scss/0_base/_vars.scss
@@ -2,15 +2,12 @@
 $base-width: 1920px;
 
 // font family
-$main-fonts: "NotoSansJP", sans-serif;
-$secondary-fonts: "NotoSerifJP", serif;
-
-$special-fonts: "Roboto", sans-serif;
-$special-fonts2: "Oswald", sans-serif;
+$main-fonts: 'Noto Sans JP', sans-serif;
+$secondary-fonts: 'Noto Serif JP', serif;
+$special-fonts: 'Roboto', sans-serif;
+$special-fonts2: 'Oswald', sans-serif;
 
 //color common
 $main-color: #231815;
 $secondary-color: #ededed;
 $highlight-color: #252a6d;
-
-
