--- a/src/_scss/2_component/_access.scss
+++ b/src/_scss/2_component/_access.scss
@@ -148,7 +148,7 @@
         display: inline-block;
         margin-right: 17px;
         text-align: center;
-        line-height: 47px;
+        line-height: 1.9;
 
         @include sp {
             width: 60px;
