--- a/src/_scss/2_component/_web.scss
+++ b/src/_scss/2_component/_web.scss
@@ -97,6 +97,7 @@
         color: #fff;
         position: relative;
         background-color: #565f64;
+        display: block;
 
         @include pc {
             width: calc((100% - 90px) / 5);
