--- a/src/_scss/2_component/_design.scss
+++ b/src/_scss/2_component/_design.scss
@@ -78,6 +78,11 @@
     .c-design__btn {
         width: 53px;
         cursor: pointer;
+        transition: 0.3s;
+
+        &:hover {
+            opacity: 0.7;
+        }
 
         @include sp {
             width: 31px;
