--- a/src/_scss/2_component/_plan.scss
+++ b/src/_scss/2_component/_plan.scss
@@ -79,8 +79,7 @@
                     margin-left: inherit;
 
                     .c-plan__src {
-                        transform: scale(1.05);
-                        transform: translateX(3px);
+                        transform: scale(1.05) translateX(3px);
                     }
 
                     .c-plan__caption {
