--- a/src/_scss/2_component/_worries.scss
+++ b/src/_scss/2_component/_worries.scss
@@ -194,7 +194,7 @@
             width: 100%;
 
             &:nth-child(2) {
-                .c-worries__question {
+                .c-worries__questionnote {
                     &::before {
                         left: 75%;
                         transform: rotate(180deg);
@@ -209,7 +209,7 @@
 
         @include sp {
             &:nth-child(2) {
-                .c-worries__question {
+                .c-worries__questionnote {
                     &::before {
                         left: 66%;
                         border-bottom: 31px solid transparent;
@@ -268,29 +268,11 @@
 
     .c-worries__questionnote {
         position: relative;
-    }
-
-    .c-worries__question {
-        font-size: 2.4rem;
-        color: #fff;
-        font-weight: 700;
-        background-color: #000;
-        border-radius: 8px;
-        height: 124px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        position: relative;
-        font-feature-settings: "falt";
-        margin-top: -56px;
-        letter-spacing: -1.3px;
-        padding: 0 10px;
-        text-align: center;
 
         &::before {
             content: "";
             position: absolute;
-            top: -23%;
+            top: -30px;
             right: 64.9%;
             left: auto;
             width: 0;
@@ -304,19 +286,39 @@
             }
 
             @include sp {
-                right: 62%;
+                top: -20px;
+                right: 60%;
                 border-bottom: 0 solid transparent;
                 border-top: 40px solid transparent;
             }
         }
+    }
+
+    .c-worries__question {
+        font-size: 2.4rem;
+        color: #fff;
+        font-weight: 700;
+        background-color: #000;
+        border-radius: 10px;
+        // height: 124px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        font-feature-settings: "falt";
+        margin-top: -56px;
+        letter-spacing: -1.3px;
+        padding: 44px 20px;
+        text-align: center;
 
         @include sp {
             font-size: 1.7rem;
-            height: 87px;
+            // height: 87px;
             margin-top: -38px;
             margin-left: 6px;
             width: 101%;
             border-radius: 5px;
+            padding: 31px 20px;
         }
     }
 
@@ -331,7 +333,7 @@
         top: -12px;
         right: -12px;
         padding: 2px 10px 5px;
-        border-radius: 20px;
+        border-radius: 18px;
         letter-spacing: -1.8px;
         width: 212px;
 
