--- a/src/_scss/2_component/_design.scss
+++ b/src/_scss/2_component/_design.scss
@@ -205,7 +205,8 @@
             width: 80.2%;
             max-width: 374px;
             margin: 49px auto 0;
-            height: 167px;
+            height: unset;
+            aspect-ratio: 702/390;
         }
     }
 
