--- a/src/_scss/0_base/_vars.scss
+++ b/src/_scss/0_base/_vars.scss
@@ -2,10 +2,10 @@
 $base-width: 1920px;
 
 // font family
-$main-fonts: 'Noto Sans JP', sans-serif;
-$secondary-fonts: 'Noto Serif JP', serif;
-$special-fonts: 'Roboto', sans-serif;
-$special-fonts2: 'Oswald', sans-serif;
+$main-fonts: "Noto Sans JP", sans-serif;
+$secondary-fonts: "Noto Serif JP", serif;
+$special-fonts: "Roboto", sans-serif;
+$special-fonts2: "Oswald", sans-serif;
 
 //color common
 $main-color: #231815;
