--- a/src/_scss/2_component/_plan.scss
+++ b/src/_scss/2_component/_plan.scss
@@ -6,7 +6,7 @@
     }
 
     @include sp {
-        padding: 50px 20px 69px;
+        padding: 50px 20px 70px;
         max-width: 375px;
         margin: 0 auto;
     }
@@ -241,7 +241,7 @@
                 flex-direction: row;
                 flex-wrap: wrap;
                 padding-left: 38px;
-                padding-top: 30px;
+                padding-top: 20px;
             }
         }
 
@@ -255,16 +255,14 @@
                 flex-direction: row;
                 flex-wrap: wrap;
                 padding-left: 38px;
-                padding-top: 30px;
+                padding-top: 20px;
             }
         }
 
         @include tab {
             &:nth-child(3) {
-                .c-plan__links {
-                    &:nth-child(1) {
-                        margin-bottom: 10px;
-                    }
+                .c-plan__td {
+                    padding-bottom: 11px;
                 }
             }
         }
@@ -309,26 +307,22 @@
 
                 .c-plan__td {
                     padding-left: 1px;
-                    padding-top: 11px;
+                    padding-top: 7px;
                 }
 
                 .c-plan__links {
                     margin-right: 8px;
-
-                    &:nth-child(1) {
-                        margin-bottom: 3px;
-                    }
                 }
             }
 
             &:nth-child(4) {
                 .c-plan__col {
-                    padding-top: 11px;
+                    padding-top: 7px;
                     padding-bottom: 12px;
                 }
 
                 .c-plan__th {
-                    transform: translate(0, -2px);
+                    transform: translate(0, 2px);
                 }
 
                 .c-plan__td {
@@ -376,6 +370,11 @@
     .c-plan__links {
         display: inline-block;
         margin-right: 21px;
+        margin-top: 10px;
+
+        @include sp {
+            margin-top: 3px;
+        }
     }
 
     .c-plan__link {
