--- a/src/_scss/2_component/_web.scss
+++ b/src/_scss/2_component/_web.scss
@@ -92,7 +92,7 @@
         width: calc((100% - 240px) / 5);
         text-align: center;
         padding-top: 3.4%;
-        padding-bottom: 2.3%;
+        padding-bottom: 1.3%;
         font-weight: 400;
         color: #fff;
         position: relative;
@@ -100,7 +100,7 @@
         display: block;
 
         @include pc {
-            width: calc((100% - 90px) / 5);
+            width: calc((73% + 100px) / 5);
             padding-left: 5px;
             padding-right: 5px;
         }
@@ -121,16 +121,10 @@
             .c-web__name {
                 transform: translate(-8px, 0);
                 letter-spacing: 0.9px;
-
-                &::after {
-                    bottom: -42%;
-                    left: 12.3%;
-                    right: 5.7%;
-                }
             }
 
             .c-web__desc {
-                transform: translate(-5px, -1px);
+                transform: translate(-5px, -2px);
             }
         }
 
@@ -150,8 +144,12 @@
                 transform: translate(3px, -9px);
             }
 
+            .c-web__line {
+                transform: translate(0, -8px);
+            }
+
             .c-web__desc {
-                transform: translate(3px, -7px);
+                transform: translate(3px, -11px);
             }
         }
 
@@ -167,11 +165,15 @@
             }
 
             .c-web__name {
-                transform: translateY(-14px);
+                transform: translateY(-13px);
+            }
+
+            .c-web__line {
+                transform: translate(-1px, -12px);
             }
 
             .c-web__desc {
-                transform: translateY(-11px);
+                transform: translateY(-15px);
             }
         }
 
@@ -188,16 +190,15 @@
 
             .c-web__name {
                 transform: translate(-1px, -6px);
+            }
 
-                &::after {
-                    bottom: -40%;
-                    left: 9.1%;
-                    right: 8%;
-                }
+            .c-web__line {
+                transform: translate(1px, -5px);
             }
 
             .c-web__desc {
                 margin-top: 7.3%;
+                transform: translate(-1px, -29px);
             }
         }
 
@@ -215,16 +216,14 @@
 
             .c-web__name {
                 transform: translate(0, -6px);
+            }
 
-                &::after {
-                    bottom: -38%;
-                    left: 8.8%;
-                    right: 8.6%;
-                }
+            .c-web__line {
+                transform: translate(0, -6px);
             }
 
             .c-web__desc {
-                transform: translate(0, -6px);
+                transform: translate(0, -9px);
                 letter-spacing: 0.6px;
             }
         }
@@ -262,7 +261,8 @@
 
         @include sp {
             width: 43%;
-            padding-bottom: 4.3%;
+            padding-bottom: 0%;
+            padding-top: 0%;
             margin-bottom: 23px;
 
             &::before {
@@ -270,7 +270,7 @@
             }
 
             &:nth-child(1) {
-                padding-bottom: 7.5%;
+                padding-bottom: 2.7%;
 
                 &::before {
                     right: -12.5%;
@@ -286,14 +286,18 @@
                     margin-top: 12px;
                 }
 
+                .c-web__line {
+                    transform: translate(0, -7px);
+                }
+
                 .c-web__desc {
-                    transform: translate(-3px, 0);
+                    transform: translate(-2px, -16px);
                 }
             }
 
             &:nth-child(2) {
                 transform: translateX(-16px);
-                padding-bottom: 7.5%;
+                padding-bottom: 3%;
 
                 &::before {
                     right: -11.3%;
@@ -302,47 +306,44 @@
                 .c-web__icon {
                     transform: none;
                     width: 18px;
-                    margin-top: 13px;
+                    margin-top: 25px;
                     margin-left: 4px;
                 }
 
                 .c-web__name {
                     margin-top: 12px;
                     transform: translateX(2px);
+                }
 
-                    &::after {
-                        bottom: -37%;
-                    }
+                .c-web__line {
+                    transform: translate(0, -5px);
                 }
 
                 .c-web__desc {
-                    transform: translateX(2px);
+                    transform: translate(1px, -15px);
                 }
             }
 
             &:nth-child(3) {
-                padding-bottom: 7.5%;
-
                 &::before {
                     right: -11.5%;
                 }
 
                 .c-web__icon {
-                    transform: scale(0.85) translate(0, -3px);
+                    transform: scale(0.8) translate(0, -5px);
                 }
 
                 .c-web__name {
-                    transform: none;
-                    margin-top: 6px;
+                    margin-top: 17px;
+                }
 
-                    &::after {
-                        bottom: -37%;
-                    }
+                .c-web__line {
+                    transform: translate(-1px, -19px);
                 }
 
                 .c-web__desc {
                     transform: none;
-                    margin-top: 13px;
+                    margin-top: -28px;
                 }
             }
 
@@ -353,38 +354,31 @@
                     right: -11.3%;
                 }
 
-                .c-web__icon {
-                    transform: none;
-                }
-
                 .c-web__name {
                     transform: none;
-                    margin-top: 10px;
-
-                    &::after {
-                        bottom: -39%;
-                    }
+                    margin-top: 7px;
                 }
 
                 .c-web__desc {
-                    margin-top: 9.3%;
+                    margin-top: 7%;
+                    transform: translate(-1px, -25px);
                 }
             }
 
             &:nth-child(5) {
-                padding-bottom: 7.5%;
+                padding-bottom: 2.9%;
 
                 .c-web__icon {
-                    transform: translate(-2px, -2px);
+                    transform: scale(0.89) translate(-2px, -4px);
                 }
 
                 .c-web__name {
                     transform: none;
-                    margin-top: 9px;
+                    margin-top: 7px;
                 }
 
                 .c-web__desc {
-                    transform: none;
+                    transform: translate(0, -15px);
                     letter-spacing: 0.2px;
                 }
             }
@@ -398,7 +392,7 @@
         @include sp {
             width: 21px;
             margin-bottom: 0;
-            margin-top: 17px;
+            margin-top: 30px;
         }
     }
 
@@ -406,15 +400,10 @@
         position: relative;
         font-size: 2.1rem;
         letter-spacing: -0.5px;
+        padding: 0 10px;
 
-        &::after {
-            position: absolute;
-            content: "";
-            background: #fff;
-            height: 1px;
-            bottom: -44%;
-            left: 8.3%;
-            right: 9.9%;
+        @include pc {
+            font-size: 1.6rem;
         }
 
         @include sp {
@@ -422,10 +411,19 @@
         }
     }
 
+    .c-web__line {
+        display: inline-block;
+        width: 82%;
+    }
+
     .c-web__desc {
         font-size: 1.6rem;
-        margin-top: 9%;
         position: relative;
+        padding: 0 10px;
+
+        @include pc {
+            font-size: 1.1rem;
+        }
 
         @include sp {
             font-size: 0.8rem;
