--- a/src/_scss/2_component/_design.scss
+++ b/src/_scss/2_component/_design.scss
@@ -142,7 +142,7 @@
     }
 
     .c-design__heading {
-        transform: translateX(3px);
+        transform: translate(3px, -2px);
 
         @include sp {
             transform: none;
@@ -165,8 +165,8 @@
     .c-design__sub {
         font-size: 2.7rem;
         font-weight: 400;
-        margin-top: 24px;
-        margin-left: 2px;
+        margin-top: 22px;
+        margin-left: 3px;
         line-height: 1.4;
 
         @include sp {
