--- a/src/_scss/2_component/_visitor.scss
+++ b/src/_scss/2_component/_visitor.scss
@@ -56,7 +56,7 @@
         height: 52px;
         border-radius: 23px;
         line-height: 2.2;
-        transform: translate(0, -4px);
+        transform: translate(0, -6px);
 
         @include tab {
             transform: none;
@@ -93,7 +93,7 @@
         font-feature-settings: "palt";
         letter-spacing: 1.69px;
         margin-left: 23px;
-        transform: translateX(-11px);
+        transform: translate(-11px, -1px);
 
         @include sp {
             font-size: 1rem;
